@@ -50,6 +50,7 @@ NEWS
   * fix sending "408 - Timeout" instead of "410 - Gone" for timedout urls in mod_secdownload (#1440)
   * workaround #1587: require userdir.path to be set to enable mod_userdir (empty string allowed)
   * make configure checks for --with-pcre, --with-zlib and --with-bzip2 failing if the headers aren't found
+  * fixed handling of waitpid() == EINTR mod_ssi on solaris 
 
 - 1.4.18 - 2007-09-09
 
